--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   },
   "homepage": "https://github.com/mrgardner/TypeScriptExample#readme",
   "devDependencies": {
+    "@types/jquery": "^2.0.32",
     "lite-server": "^2.2.2"
+  },
+  "dependencies": {
+    "jquery": "^3.1.1",
+    "systemjs": "^0.19.39"
   }
 }
