--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,6 @@
 {
     "compilerOptions": {
-        "module": "commonjs",
         "target": "es5",
-        "noImplicitAny": false,
-        "sourceMap": false
-    },
-    "exclude": ["node_modules"]
+        "noImplicitAny": false
+    }
 }
